7.1.2 CDDL'd code